APIs/apicurio.local/registry/1.3.2.Final/javascript-client/README.md
# apicurio_registry_api

ApicurioRegistryApi - JavaScript client for apicurio_registry_api
Apicurio Registry is a datastore for standard event schemas and API designs. Apicurio Registry enables developers to manage and share the structure of their data using a REST interface. For example, client applications can dynamically push or pull the latest updates to or from the registry without needing to redeploy. Apicurio Registry also enables developers to create rules that govern how registry content can evolve over time. For example, this includes rules for content validation and version compatibility.

The Apicurio Registry REST API enables client applications to manage the artifacts in the registry. This API provides create, read, update, and delete operations for schema and API artifacts, rules, versions, and metadata. 

The supported artifact types include:
- Apache Avro schema
- AsyncAPI specification
- Google protocol buffers (schema and file descriptor)
- GraphQL schema
- JSON Schema
- Kafka Connect schema
- OpenAPI specification
- Web Services Description Language
- XML Schema Definition


**Note**: The Apicurio Registry REST API is available from `http://MY-REGISTRY-URL/api`. You must prefix all API operation paths with `/api`, for example, `api/ids/{globalId}`.

This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.3.2.Final
- Package version: 1.3.2.Final
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://github.com/apicurio/apicurio-registry](https://github.com/apicurio/apicurio-registry)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install apicurio_registry_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your apicurio_registry_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var ApicurioRegistryApi = require('apicurio_registry_api');


var api = new ApicurioRegistryApi.ArtifactRulesApi()
var artifactId = "artifactId_example"; // {String} The artifact ID.  Can be a string (client-provided) or integer (server-generated) representing the unique artifact identifier.
var rule = new ApicurioRegistryApi.Rule(); // {Rule} 
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully.');
  }
};
api.createArtifactRule(artifactId, rule, callback);

```

## Documentation for API Endpoints

All URIs are relative to *http://apicurio.local*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ApicurioRegistryApi.ArtifactRulesApi* | [**createArtifactRule**](docs/ArtifactRulesApi.md#createArtifactRule) | **POST** /artifacts/{artifactId}/rules | Create artifact rule
*ApicurioRegistryApi.ArtifactRulesApi* | [**deleteArtifactRule**](docs/ArtifactRulesApi.md#deleteArtifactRule) | **DELETE** /artifacts/{artifactId}/rules/{rule} | Delete artifact rule
*ApicurioRegistryApi.ArtifactRulesApi* | [**deleteArtifactRules**](docs/ArtifactRulesApi.md#deleteArtifactRules) | **DELETE** /artifacts/{artifactId}/rules | Delete artifact rules
*ApicurioRegistryApi.ArtifactRulesApi* | [**getArtifactRuleConfig**](docs/ArtifactRulesApi.md#getArtifactRuleConfig) | **GET** /artifacts/{artifactId}/rules/{rule} | Get artifact rule configuration
*ApicurioRegistryApi.ArtifactRulesApi* | [**listArtifactRules**](docs/ArtifactRulesApi.md#listArtifactRules) | **GET** /artifacts/{artifactId}/rules | List artifact rules
*ApicurioRegistryApi.ArtifactRulesApi* | [**testUpdateArtifact**](docs/ArtifactRulesApi.md#testUpdateArtifact) | **PUT** /artifacts/{artifactId}/test | Test update artifact
*ApicurioRegistryApi.ArtifactRulesApi* | [**updateArtifactRuleConfig**](docs/ArtifactRulesApi.md#updateArtifactRuleConfig) | **PUT** /artifacts/{artifactId}/rules/{rule} | Update artifact rule configuration
*ApicurioRegistryApi.ArtifactsApi* | [**createArtifact**](docs/ArtifactsApi.md#createArtifact) | **POST** /artifacts | Create artifact
*ApicurioRegistryApi.ArtifactsApi* | [**deleteArtifact**](docs/ArtifactsApi.md#deleteArtifact) | **DELETE** /artifacts/{artifactId} | Delete artifact
*ApicurioRegistryApi.ArtifactsApi* | [**getArtifactByGlobalId**](docs/ArtifactsApi.md#getArtifactByGlobalId) | **GET** /ids/{globalId} | Get artifact by global ID
*ApicurioRegistryApi.ArtifactsApi* | [**getLatestArtifact**](docs/ArtifactsApi.md#getLatestArtifact) | **GET** /artifacts/{artifactId} | Get latest artifact
*ApicurioRegistryApi.ArtifactsApi* | [**listArtifacts**](docs/ArtifactsApi.md#listArtifacts) | **GET** /artifacts | List all artifact IDs
*ApicurioRegistryApi.ArtifactsApi* | [**searchArtifacts_0**](docs/ArtifactsApi.md#searchArtifacts_0) | **GET** /search/artifacts | Search for artifacts
*ApicurioRegistryApi.ArtifactsApi* | [**updateArtifact**](docs/ArtifactsApi.md#updateArtifact) | **PUT** /artifacts/{artifactId} | Update artifact
*ApicurioRegistryApi.ArtifactsApi* | [**updateArtifactState**](docs/ArtifactsApi.md#updateArtifactState) | **PUT** /artifacts/{artifactId}/state | Update artifact state
*ApicurioRegistryApi.GlobalRulesApi* | [**createGlobalRule**](docs/GlobalRulesApi.md#createGlobalRule) | **POST** /rules | Create global rule
*ApicurioRegistryApi.GlobalRulesApi* | [**deleteAllGlobalRules**](docs/GlobalRulesApi.md#deleteAllGlobalRules) | **DELETE** /rules | Delete all global rules
*ApicurioRegistryApi.GlobalRulesApi* | [**deleteGlobalRule**](docs/GlobalRulesApi.md#deleteGlobalRule) | **DELETE** /rules/{rule} | Delete global rule
*ApicurioRegistryApi.GlobalRulesApi* | [**getGlobalRuleConfig**](docs/GlobalRulesApi.md#getGlobalRuleConfig) | **GET** /rules/{rule} | Get global rule configuration
*ApicurioRegistryApi.GlobalRulesApi* | [**listGlobalRules**](docs/GlobalRulesApi.md#listGlobalRules) | **GET** /rules | List global rules
*ApicurioRegistryApi.GlobalRulesApi* | [**updateGlobalRuleConfig**](docs/GlobalRulesApi.md#updateGlobalRuleConfig) | **PUT** /rules/{rule} | Update global rule configuration
*ApicurioRegistryApi.MetadataApi* | [**deleteArtifactVersionMetaData**](docs/MetadataApi.md#deleteArtifactVersionMetaData) | **DELETE** /artifacts/{artifactId}/versions/{version}/meta | Delete artifact version metadata
*ApicurioRegistryApi.MetadataApi* | [**getArtifactMetaData**](docs/MetadataApi.md#getArtifactMetaData) | **GET** /artifacts/{artifactId}/meta | Get artifact metadata
*ApicurioRegistryApi.MetadataApi* | [**getArtifactMetaDataByContent**](docs/MetadataApi.md#getArtifactMetaDataByContent) | **POST** /artifacts/{artifactId}/meta | Get artifact metadata by content
*ApicurioRegistryApi.MetadataApi* | [**getArtifactMetaDataByGlobalId**](docs/MetadataApi.md#getArtifactMetaDataByGlobalId) | **GET** /ids/{globalId}/meta | Get global artifact metadata
*ApicurioRegistryApi.MetadataApi* | [**getArtifactVersionMetaData**](docs/MetadataApi.md#getArtifactVersionMetaData) | **GET** /artifacts/{artifactId}/versions/{version}/meta | Get artifact version metadata
*ApicurioRegistryApi.MetadataApi* | [**updateArtifactMetaData**](docs/MetadataApi.md#updateArtifactMetaData) | **PUT** /artifacts/{artifactId}/meta | Update artifact metadata
*ApicurioRegistryApi.MetadataApi* | [**updateArtifactVersionMetaData**](docs/MetadataApi.md#updateArtifactVersionMetaData) | **PUT** /artifacts/{artifactId}/versions/{version}/meta | Update artifact version metadata
*ApicurioRegistryApi.SearchApi* | [**searchArtifacts**](docs/SearchApi.md#searchArtifacts) | **GET** /search/artifacts | Search for artifacts
*ApicurioRegistryApi.SearchApi* | [**searchVersions**](docs/SearchApi.md#searchVersions) | **GET** /search/artifacts/{artifactId}/versions | Search artifact versions
*ApicurioRegistryApi.VersionsApi* | [**createArtifactVersion**](docs/VersionsApi.md#createArtifactVersion) | **POST** /artifacts/{artifactId}/versions | Create artifact version
*ApicurioRegistryApi.VersionsApi* | [**getArtifactVersion**](docs/VersionsApi.md#getArtifactVersion) | **GET** /artifacts/{artifactId}/versions/{version} | Get artifact version
*ApicurioRegistryApi.VersionsApi* | [**listArtifactVersions**](docs/VersionsApi.md#listArtifactVersions) | **GET** /artifacts/{artifactId}/versions | List artifact versions
*ApicurioRegistryApi.VersionsApi* | [**searchVersions_0**](docs/VersionsApi.md#searchVersions_0) | **GET** /search/artifacts/{artifactId}/versions | Search artifact versions
*ApicurioRegistryApi.VersionsApi* | [**updateArtifactVersionState**](docs/VersionsApi.md#updateArtifactVersionState) | **PUT** /artifacts/{artifactId}/versions/{version}/state | Update artifact version state


## Documentation for Models

 - [ApicurioRegistryApi.ArtifactMetaData](docs/ArtifactMetaData.md)
 - [ApicurioRegistryApi.ArtifactSearchResults](docs/ArtifactSearchResults.md)
 - [ApicurioRegistryApi.ArtifactState](docs/ArtifactState.md)
 - [ApicurioRegistryApi.ArtifactType](docs/ArtifactType.md)
 - [ApicurioRegistryApi.EditableMetaData](docs/EditableMetaData.md)
 - [ApicurioRegistryApi.Error](docs/Error.md)
 - [ApicurioRegistryApi.Rule](docs/Rule.md)
 - [ApicurioRegistryApi.RuleType](docs/RuleType.md)
 - [ApicurioRegistryApi.SearchOver](docs/SearchOver.md)
 - [ApicurioRegistryApi.SearchedArtifact](docs/SearchedArtifact.md)
 - [ApicurioRegistryApi.SearchedVersion](docs/SearchedVersion.md)
 - [ApicurioRegistryApi.SortOrder](docs/SortOrder.md)
 - [ApicurioRegistryApi.UpdateState](docs/UpdateState.md)
 - [ApicurioRegistryApi.VersionMetaData](docs/VersionMetaData.md)
 - [ApicurioRegistryApi.VersionSearchResults](docs/VersionSearchResults.md)


## Documentation for Authorization

Endpoints do not require authorization.

