APIs/apicurio.local/registry/2.4.x/javascript-client/README.md
# apicurio_registry_api__v2

ApicurioRegistryApiV2 - JavaScript client for apicurio_registry_api__v2
Apicurio Registry is a datastore for standard event schemas and API designs. Apicurio Registry enables developers to manage and share the structure of their data using a REST interface. For example, client applications can dynamically push or pull the latest updates to or from the registry without needing to redeploy. Apicurio Registry also enables developers to create rules that govern how registry content can evolve over time. For example, this includes rules for content validation and version compatibility.

The Apicurio Registry REST API enables client applications to manage the artifacts in the registry. This API provides create, read, update, and delete operations for schema and API artifacts, rules, versions, and metadata. 

The supported artifact types include:
- Apache Avro schema
- AsyncAPI specification
- Google protocol buffers
- GraphQL schema
- JSON Schema
- Kafka Connect schema
- OpenAPI specification
- Web Services Description Language
- XML Schema Definition


**Important**: The Apicurio Registry REST API is available from `https://MY-REGISTRY-URL/apis/registry/v2` by default. Therefore you must prefix all API operation paths with `../apis/registry/v2` in this case. For example: `../apis/registry/v2/ids/globalIds/{globalId}`.

This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.4.x
- Package version: 2.4.x
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://github.com/apicurio/apicurio-registry](https://github.com/apicurio/apicurio-registry)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install apicurio_registry_api__v2 --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your apicurio_registry_api__v2 from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var ApicurioRegistryApiV2 = require('apicurio_registry_api__v2');


var api = new ApicurioRegistryApiV2.AdminApi()
var rule = new ApicurioRegistryApiV2.Rule(); // {Rule} 
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully.');
  }
};
api.createGlobalRule_0(rule, callback);

```

## Documentation for API Endpoints

All URIs are relative to *http://apicurio.local*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ApicurioRegistryApiV2.AdminApi* | [**createGlobalRule_0**](docs/AdminApi.md#createGlobalRule_0) | **POST** /admin/rules | Create global rule
*ApicurioRegistryApiV2.AdminApi* | [**createRoleMapping**](docs/AdminApi.md#createRoleMapping) | **POST** /admin/roleMappings | Create a new role mapping
*ApicurioRegistryApiV2.AdminApi* | [**deleteAllGlobalRules_0**](docs/AdminApi.md#deleteAllGlobalRules_0) | **DELETE** /admin/rules | Delete all global rules
*ApicurioRegistryApiV2.AdminApi* | [**deleteGlobalRule_0**](docs/AdminApi.md#deleteGlobalRule_0) | **DELETE** /admin/rules/{rule} | Delete global rule
*ApicurioRegistryApiV2.AdminApi* | [**deleteRoleMapping**](docs/AdminApi.md#deleteRoleMapping) | **DELETE** /admin/roleMappings/{principalId} | Delete a role mapping
*ApicurioRegistryApiV2.AdminApi* | [**exportData**](docs/AdminApi.md#exportData) | **GET** /admin/export | Export registry data
*ApicurioRegistryApiV2.AdminApi* | [**getConfigProperty**](docs/AdminApi.md#getConfigProperty) | **GET** /admin/config/properties/{propertyName} | Get configuration property value
*ApicurioRegistryApiV2.AdminApi* | [**getGlobalRuleConfig_0**](docs/AdminApi.md#getGlobalRuleConfig_0) | **GET** /admin/rules/{rule} | Get global rule configuration
*ApicurioRegistryApiV2.AdminApi* | [**getLogConfiguration**](docs/AdminApi.md#getLogConfiguration) | **GET** /admin/loggers/{logger} | Get a single logger configuration
*ApicurioRegistryApiV2.AdminApi* | [**getRoleMapping**](docs/AdminApi.md#getRoleMapping) | **GET** /admin/roleMappings/{principalId} | Return a single role mapping
*ApicurioRegistryApiV2.AdminApi* | [**importData**](docs/AdminApi.md#importData) | **POST** /admin/import | Import registry data
*ApicurioRegistryApiV2.AdminApi* | [**listArtifactTypes_0**](docs/AdminApi.md#listArtifactTypes_0) | **GET** /admin/artifactTypes | List artifact types
*ApicurioRegistryApiV2.AdminApi* | [**listConfigProperties**](docs/AdminApi.md#listConfigProperties) | **GET** /admin/config/properties | List all configuration properties
*ApicurioRegistryApiV2.AdminApi* | [**listGlobalRules_0**](docs/AdminApi.md#listGlobalRules_0) | **GET** /admin/rules | List global rules
*ApicurioRegistryApiV2.AdminApi* | [**listLogConfigurations**](docs/AdminApi.md#listLogConfigurations) | **GET** /admin/loggers | List logging configurations
*ApicurioRegistryApiV2.AdminApi* | [**listRoleMappings**](docs/AdminApi.md#listRoleMappings) | **GET** /admin/roleMappings | List all role mappings
*ApicurioRegistryApiV2.AdminApi* | [**removeLogConfiguration**](docs/AdminApi.md#removeLogConfiguration) | **DELETE** /admin/loggers/{logger} | Removes logger configuration
*ApicurioRegistryApiV2.AdminApi* | [**resetConfigProperty**](docs/AdminApi.md#resetConfigProperty) | **DELETE** /admin/config/properties/{propertyName} | Reset a configuration property
*ApicurioRegistryApiV2.AdminApi* | [**setLogConfiguration**](docs/AdminApi.md#setLogConfiguration) | **PUT** /admin/loggers/{logger} | Set a logger&#39;s configuration
*ApicurioRegistryApiV2.AdminApi* | [**updateConfigProperty**](docs/AdminApi.md#updateConfigProperty) | **PUT** /admin/config/properties/{propertyName} | Update a configuration property
*ApicurioRegistryApiV2.AdminApi* | [**updateGlobalRuleConfig_0**](docs/AdminApi.md#updateGlobalRuleConfig_0) | **PUT** /admin/rules/{rule} | Update global rule configuration
*ApicurioRegistryApiV2.AdminApi* | [**updateRoleMapping**](docs/AdminApi.md#updateRoleMapping) | **PUT** /admin/roleMappings/{principalId} | Update a role mapping
*ApicurioRegistryApiV2.ArtifactRulesApi* | [**createArtifactRule**](docs/ArtifactRulesApi.md#createArtifactRule) | **POST** /groups/{groupId}/artifacts/{artifactId}/rules | Create artifact rule
*ApicurioRegistryApiV2.ArtifactRulesApi* | [**deleteArtifactRule**](docs/ArtifactRulesApi.md#deleteArtifactRule) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/rules/{rule} | Delete artifact rule
*ApicurioRegistryApiV2.ArtifactRulesApi* | [**deleteArtifactRules**](docs/ArtifactRulesApi.md#deleteArtifactRules) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/rules | Delete artifact rules
*ApicurioRegistryApiV2.ArtifactRulesApi* | [**getArtifactRuleConfig**](docs/ArtifactRulesApi.md#getArtifactRuleConfig) | **GET** /groups/{groupId}/artifacts/{artifactId}/rules/{rule} | Get artifact rule configuration
*ApicurioRegistryApiV2.ArtifactRulesApi* | [**listArtifactRules**](docs/ArtifactRulesApi.md#listArtifactRules) | **GET** /groups/{groupId}/artifacts/{artifactId}/rules | List artifact rules
*ApicurioRegistryApiV2.ArtifactRulesApi* | [**testUpdateArtifact**](docs/ArtifactRulesApi.md#testUpdateArtifact) | **PUT** /groups/{groupId}/artifacts/{artifactId}/test | Test update artifact
*ApicurioRegistryApiV2.ArtifactRulesApi* | [**updateArtifactRuleConfig**](docs/ArtifactRulesApi.md#updateArtifactRuleConfig) | **PUT** /groups/{groupId}/artifacts/{artifactId}/rules/{rule} | Update artifact rule configuration
*ApicurioRegistryApiV2.ArtifactTypeApi* | [**listArtifactTypes**](docs/ArtifactTypeApi.md#listArtifactTypes) | **GET** /admin/artifactTypes | List artifact types
*ApicurioRegistryApiV2.ArtifactsApi* | [**createArtifact**](docs/ArtifactsApi.md#createArtifact) | **POST** /groups/{groupId}/artifacts | Create artifact
*ApicurioRegistryApiV2.ArtifactsApi* | [**deleteArtifact**](docs/ArtifactsApi.md#deleteArtifact) | **DELETE** /groups/{groupId}/artifacts/{artifactId} | Delete artifact
*ApicurioRegistryApiV2.ArtifactsApi* | [**deleteArtifactsInGroup**](docs/ArtifactsApi.md#deleteArtifactsInGroup) | **DELETE** /groups/{groupId}/artifacts | Delete artifacts in group
*ApicurioRegistryApiV2.ArtifactsApi* | [**getContentByGlobalId**](docs/ArtifactsApi.md#getContentByGlobalId) | **GET** /ids/globalIds/{globalId} | Get artifact by global ID
*ApicurioRegistryApiV2.ArtifactsApi* | [**getContentByHash**](docs/ArtifactsApi.md#getContentByHash) | **GET** /ids/contentHashes/{contentHash}/ | Get artifact content by SHA-256 hash
*ApicurioRegistryApiV2.ArtifactsApi* | [**getContentById**](docs/ArtifactsApi.md#getContentById) | **GET** /ids/contentIds/{contentId}/ | Get artifact content by ID
*ApicurioRegistryApiV2.ArtifactsApi* | [**getLatestArtifact**](docs/ArtifactsApi.md#getLatestArtifact) | **GET** /groups/{groupId}/artifacts/{artifactId} | Get latest artifact
*ApicurioRegistryApiV2.ArtifactsApi* | [**listArtifactsInGroup**](docs/ArtifactsApi.md#listArtifactsInGroup) | **GET** /groups/{groupId}/artifacts | List artifacts in group
*ApicurioRegistryApiV2.ArtifactsApi* | [**referencesByContentHash**](docs/ArtifactsApi.md#referencesByContentHash) | **GET** /ids/contentHashes/{contentHash}/references | List artifact references by hash
*ApicurioRegistryApiV2.ArtifactsApi* | [**referencesByContentId**](docs/ArtifactsApi.md#referencesByContentId) | **GET** /ids/contentIds/{contentId}/references | List artifact references by content ID
*ApicurioRegistryApiV2.ArtifactsApi* | [**referencesByGlobalId**](docs/ArtifactsApi.md#referencesByGlobalId) | **GET** /ids/globalIds/{globalId}/references | List artifact references by global ID
*ApicurioRegistryApiV2.ArtifactsApi* | [**searchArtifactsByContent_0**](docs/ArtifactsApi.md#searchArtifactsByContent_0) | **POST** /search/artifacts | Search for artifacts by content
*ApicurioRegistryApiV2.ArtifactsApi* | [**searchArtifacts_0**](docs/ArtifactsApi.md#searchArtifacts_0) | **GET** /search/artifacts | Search for artifacts
*ApicurioRegistryApiV2.ArtifactsApi* | [**updateArtifact**](docs/ArtifactsApi.md#updateArtifact) | **PUT** /groups/{groupId}/artifacts/{artifactId} | Update artifact
*ApicurioRegistryApiV2.ArtifactsApi* | [**updateArtifactState**](docs/ArtifactsApi.md#updateArtifactState) | **PUT** /groups/{groupId}/artifacts/{artifactId}/state | Update artifact state
*ApicurioRegistryApiV2.GlobalRulesApi* | [**createGlobalRule**](docs/GlobalRulesApi.md#createGlobalRule) | **POST** /admin/rules | Create global rule
*ApicurioRegistryApiV2.GlobalRulesApi* | [**deleteAllGlobalRules**](docs/GlobalRulesApi.md#deleteAllGlobalRules) | **DELETE** /admin/rules | Delete all global rules
*ApicurioRegistryApiV2.GlobalRulesApi* | [**deleteGlobalRule**](docs/GlobalRulesApi.md#deleteGlobalRule) | **DELETE** /admin/rules/{rule} | Delete global rule
*ApicurioRegistryApiV2.GlobalRulesApi* | [**getGlobalRuleConfig**](docs/GlobalRulesApi.md#getGlobalRuleConfig) | **GET** /admin/rules/{rule} | Get global rule configuration
*ApicurioRegistryApiV2.GlobalRulesApi* | [**listGlobalRules**](docs/GlobalRulesApi.md#listGlobalRules) | **GET** /admin/rules | List global rules
*ApicurioRegistryApiV2.GlobalRulesApi* | [**updateGlobalRuleConfig**](docs/GlobalRulesApi.md#updateGlobalRuleConfig) | **PUT** /admin/rules/{rule} | Update global rule configuration
*ApicurioRegistryApiV2.GroupsApi* | [**createGroup**](docs/GroupsApi.md#createGroup) | **POST** /groups | Create a new group
*ApicurioRegistryApiV2.GroupsApi* | [**deleteGroupById**](docs/GroupsApi.md#deleteGroupById) | **DELETE** /groups/{groupId} | Delete a group by the specified ID.
*ApicurioRegistryApiV2.GroupsApi* | [**getGroupById**](docs/GroupsApi.md#getGroupById) | **GET** /groups/{groupId} | Get a group by the specified ID.
*ApicurioRegistryApiV2.GroupsApi* | [**listGroups**](docs/GroupsApi.md#listGroups) | **GET** /groups | List groups
*ApicurioRegistryApiV2.MetadataApi* | [**deleteArtifactVersionMetaData**](docs/MetadataApi.md#deleteArtifactVersionMetaData) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/meta | Delete artifact version metadata
*ApicurioRegistryApiV2.MetadataApi* | [**getArtifactMetaData**](docs/MetadataApi.md#getArtifactMetaData) | **GET** /groups/{groupId}/artifacts/{artifactId}/meta | Get artifact metadata
*ApicurioRegistryApiV2.MetadataApi* | [**getArtifactOwner**](docs/MetadataApi.md#getArtifactOwner) | **GET** /groups/{groupId}/artifacts/{artifactId}/owner | Get artifact owner
*ApicurioRegistryApiV2.MetadataApi* | [**getArtifactVersionMetaData**](docs/MetadataApi.md#getArtifactVersionMetaData) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/meta | Get artifact version metadata
*ApicurioRegistryApiV2.MetadataApi* | [**getArtifactVersionMetaDataByContent**](docs/MetadataApi.md#getArtifactVersionMetaDataByContent) | **POST** /groups/{groupId}/artifacts/{artifactId}/meta | Get artifact version metadata by content
*ApicurioRegistryApiV2.MetadataApi* | [**updateArtifactMetaData**](docs/MetadataApi.md#updateArtifactMetaData) | **PUT** /groups/{groupId}/artifacts/{artifactId}/meta | Update artifact metadata
*ApicurioRegistryApiV2.MetadataApi* | [**updateArtifactOwner**](docs/MetadataApi.md#updateArtifactOwner) | **PUT** /groups/{groupId}/artifacts/{artifactId}/owner | Update artifact owner
*ApicurioRegistryApiV2.MetadataApi* | [**updateArtifactVersionMetaData**](docs/MetadataApi.md#updateArtifactVersionMetaData) | **PUT** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/meta | Update artifact version metadata
*ApicurioRegistryApiV2.SearchApi* | [**searchArtifacts**](docs/SearchApi.md#searchArtifacts) | **GET** /search/artifacts | Search for artifacts
*ApicurioRegistryApiV2.SearchApi* | [**searchArtifactsByContent**](docs/SearchApi.md#searchArtifactsByContent) | **POST** /search/artifacts | Search for artifacts by content
*ApicurioRegistryApiV2.SystemApi* | [**getResourceLimits**](docs/SystemApi.md#getResourceLimits) | **GET** /system/limits | Get resource limits information
*ApicurioRegistryApiV2.SystemApi* | [**getSystemInfo**](docs/SystemApi.md#getSystemInfo) | **GET** /system/info | Get system information
*ApicurioRegistryApiV2.UsersApi* | [**getCurrentUserInfo**](docs/UsersApi.md#getCurrentUserInfo) | **GET** /users/me | Get current user
*ApicurioRegistryApiV2.VersionsApi* | [**createArtifactVersion**](docs/VersionsApi.md#createArtifactVersion) | **POST** /groups/{groupId}/artifacts/{artifactId}/versions | Create artifact version
*ApicurioRegistryApiV2.VersionsApi* | [**deleteArtifactVersion**](docs/VersionsApi.md#deleteArtifactVersion) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/versions/{version} | Delete artifact version
*ApicurioRegistryApiV2.VersionsApi* | [**getArtifactVersion**](docs/VersionsApi.md#getArtifactVersion) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions/{version} | Get artifact version
*ApicurioRegistryApiV2.VersionsApi* | [**getArtifactVersionReferences**](docs/VersionsApi.md#getArtifactVersionReferences) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/references | Get artifact version
*ApicurioRegistryApiV2.VersionsApi* | [**listArtifactVersions**](docs/VersionsApi.md#listArtifactVersions) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions | List artifact versions
*ApicurioRegistryApiV2.VersionsApi* | [**updateArtifactVersionState**](docs/VersionsApi.md#updateArtifactVersionState) | **PUT** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/state | Update artifact version state


## Documentation for Models

 - [ApicurioRegistryApiV2.ArtifactContent](docs/ArtifactContent.md)
 - [ApicurioRegistryApiV2.ArtifactMetaData](docs/ArtifactMetaData.md)
 - [ApicurioRegistryApiV2.ArtifactOwner](docs/ArtifactOwner.md)
 - [ApicurioRegistryApiV2.ArtifactReference](docs/ArtifactReference.md)
 - [ApicurioRegistryApiV2.ArtifactSearchResults](docs/ArtifactSearchResults.md)
 - [ApicurioRegistryApiV2.ArtifactState](docs/ArtifactState.md)
 - [ApicurioRegistryApiV2.ArtifactTypeInfo](docs/ArtifactTypeInfo.md)
 - [ApicurioRegistryApiV2.ConfigurationProperty](docs/ConfigurationProperty.md)
 - [ApicurioRegistryApiV2.CreateGroupMetaData](docs/CreateGroupMetaData.md)
 - [ApicurioRegistryApiV2.DownloadRef](docs/DownloadRef.md)
 - [ApicurioRegistryApiV2.EditableMetaData](docs/EditableMetaData.md)
 - [ApicurioRegistryApiV2.Error](docs/Error.md)
 - [ApicurioRegistryApiV2.GroupMetaData](docs/GroupMetaData.md)
 - [ApicurioRegistryApiV2.GroupSearchResults](docs/GroupSearchResults.md)
 - [ApicurioRegistryApiV2.IfExists](docs/IfExists.md)
 - [ApicurioRegistryApiV2.Limits](docs/Limits.md)
 - [ApicurioRegistryApiV2.LogConfiguration](docs/LogConfiguration.md)
 - [ApicurioRegistryApiV2.LogLevel](docs/LogLevel.md)
 - [ApicurioRegistryApiV2.NamedLogConfiguration](docs/NamedLogConfiguration.md)
 - [ApicurioRegistryApiV2.RoleMapping](docs/RoleMapping.md)
 - [ApicurioRegistryApiV2.RoleType](docs/RoleType.md)
 - [ApicurioRegistryApiV2.Rule](docs/Rule.md)
 - [ApicurioRegistryApiV2.RuleType](docs/RuleType.md)
 - [ApicurioRegistryApiV2.RuleViolationCause](docs/RuleViolationCause.md)
 - [ApicurioRegistryApiV2.RuleViolationError](docs/RuleViolationError.md)
 - [ApicurioRegistryApiV2.SearchedArtifact](docs/SearchedArtifact.md)
 - [ApicurioRegistryApiV2.SearchedGroup](docs/SearchedGroup.md)
 - [ApicurioRegistryApiV2.SearchedVersion](docs/SearchedVersion.md)
 - [ApicurioRegistryApiV2.SortBy](docs/SortBy.md)
 - [ApicurioRegistryApiV2.SortOrder](docs/SortOrder.md)
 - [ApicurioRegistryApiV2.SystemInfo](docs/SystemInfo.md)
 - [ApicurioRegistryApiV2.UpdateConfigurationProperty](docs/UpdateConfigurationProperty.md)
 - [ApicurioRegistryApiV2.UpdateRole](docs/UpdateRole.md)
 - [ApicurioRegistryApiV2.UpdateState](docs/UpdateState.md)
 - [ApicurioRegistryApiV2.UserInfo](docs/UserInfo.md)
 - [ApicurioRegistryApiV2.VersionMetaData](docs/VersionMetaData.md)
 - [ApicurioRegistryApiV2.VersionSearchResults](docs/VersionSearchResults.md)


## Documentation for Authorization

Endpoints do not require authorization.

